--- a/pom.xml
+++ b/pom.xml
@@ -96,4 +96,12 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub TheDesignCraftYT Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/thedesigncraftyt/dbs</url>
+        </repository>
+    </distributionManagement>
+
 </project>
