--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.thedesigncraft.discord.botstuff</groupId>
-    <artifactId>DBS</artifactId>
+    <artifactId>dbs</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
