--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.thedesigncraft.discord.botstuff</groupId>
     <artifactId>dbs</artifactId>
-    <version>1.0-SNAPSHOT2</version>
+    <version>v1.0.0-alpha.1</version>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
