--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,5 @@
 blank_issues_enabled: false
+contact_links:
+  - name: Discord Support Server
+    url: https://discord.gg/mYKK4BwGxe
+    about: You can ask here too!
