--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.thedesigncraft.discord</groupId>
+    <groupId>de.thedesigncraft</groupId>
     <artifactId>dbs</artifactId>
     <version>v1.1.0-alpha.2</version>
 
