--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.7</version>
                 <configuration>
-                    <generatePom>false</generatePom>
+                    <generatePom>true</generatePom>
                 </configuration>
             </plugin>
         </plugins>
