--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.thedesigncraft.discord</groupId>
     <artifactId>dbs</artifactId>
-    <version>v1.1.0-alpha.3_test3</version>
+    <version>v1.1.0</version>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
